tests/paczka1/fuzzy1/30079791.err
Error in line 3: A846 A96 54,1
Error in line 6: yWs8b A860 19,1
Error in line 25: h1VB A846 32,3
Error in line 28: h1VB A860 15,5
Error in line 32: 0ux4lG A802 66,3
